# parkzone

./: .gitignore  CMakeLists.txt  Makefile  build.ps1
src/: main.cpp  main_gui.cpp
src/include/: AllocationEngine.h  AnalyticsEngine.h  Operation.h  ParkingArea.h  ParkingRequest.h  ParkingSlot.h  ParkingSystem.h  RequestState.h  RollbackManager.h  Vehicle.h  Zone.h
src/lib/: AllocationEngine.cpp  AnalyticsEngine.cpp  Operation.cpp  ParkingArea.cpp  ParkingRequest.cpp  ParkingSlot.cpp  ParkingSystem.cpp  RequestState.cpp  RollbackManager.cpp  Vehicle.cpp  Zone.cpp
src/ui/: AnalyticsScreen.cpp  AnalyticsScreen.h  DashboardScreen.cpp  DashboardScreen.h  MainWindow.cpp  MainWindow.h  RequestScreen.cpp  RequestScreen.h  RollbackScreen.cpp  RollbackScreen.h  SetupScreen.cpp  SetupScreen.h  StatusScreen.cpp  StatusScreen.h
